top fixed and hidden scrollbar

--- a/robotfriends/src/Card.css
+++ b/robotfriends/src/Card.css
@@ -2,7 +2,17 @@
     font-family: 'ZenDots-Regular';
     src: url(./assets/ZenDots-Regular.ttf);
 }
+html {
+    overflow: scroll;
+    overflow-x: hidden;
+}
 
+::-webkit-scrollbar {
+    width: 0;
+    /* Remove scrollbar space */
+    background: transparent;
+    /* Optional: just make scrollbar invisible */
+}
 
 .robot-img{
     width: 200px;
